mem_dbg/tests/snapshots/test_ref_dedup_insta__arc_with_follow_rcs@x86.snap
---
source: mem_dbg/tests/test_ref_dedup_insta.rs
expression: output
---
82 B 100.00% ⏺: test_ref_dedup_insta::SharedArc
 8 B   9.76% ├╴name: &str
37 B  45.12% ├╴first: alloc::sync::Arc<alloc::string::String> @ 0x[ADDR_1]
25 B  30.49% │ ╰╴: alloc::string::String
 4 B   4.88% ├╴second: alloc::sync::Arc<alloc::string::String> → 0x[ADDR_1]
33 B  40.24% ╰╴different: alloc::sync::Arc<alloc::string::String> @ 0x[ADDR_2]
21 B  25.61%   ╰╴: alloc::string::String
