mem_dbg/tests/snapshots/test_ref_dedup_insta__arc_without_follow_rcs@x86.snap
---
source: mem_dbg/tests/test_ref_dedup_insta.rs
assertion_line: 149
expression: output
---
20 B 100.00% ⏺: test_ref_dedup_insta::SharedArc
 8 B  40.00% ├╴name: &str
 4 B  20.00% ├╴first: alloc::sync::Arc<alloc::string::String>
 4 B  20.00% ├╴second: alloc::sync::Arc<alloc::string::String>
 4 B  20.00% ╰╴different: alloc::sync::Arc<alloc::string::String>
